[package]
name = "bleiglanzinfo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bleiglanzinfo"
path = "src/main.rs"

[[bin]]
name = "hash"
path = "src/bin/hash.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["cookie-private"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
maud = { version = "0.27", features = ["axum"] }
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cookie = "0.18"
rand = "0.8"
tower = "0.5"
hex = "0.4"
